<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding"
    android:background="@color/background_main">

    <ImageView
        android:id="@+id/iv_illustration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/illustration_onboarding_1"
        android:layout_marginBottom="32dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_car_success_title"
        android:textColor="@color/text_primary"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/tv_subtitle"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_car_success_subtitle"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_to_main"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>